2023-07-29T16:08:20Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5701334899 # 1768
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-29
* notice: last 14d: unq all: 4 29
* notice: prev accum: outdated-unq outdated-all / unq all: 1426 4854 / 1444 4884
* notice: next accum: outdated-unq outdated-all / unq all: 1427 4856 / 1444 4885
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-07-15] / [2023-07-29]

2023-07-29T08:08:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5699382732 # 1767
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-29
* notice: last 14d: unq all: 4 29
* notice: prev accum: outdated-unq outdated-all / unq all: 1426 4854 / 1443 4883
* notice: next accum: outdated-unq outdated-all / unq all: 1426 4854 / 1444 4884
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-15 2023-07-29]

2023-07-29T00:42:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5697523077 # 1766
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-29
* notice: last 14d: unq all: 4 29
* notice: prev accum: outdated-unq outdated-all / unq all: 1417 4842 / 1443 4883
* notice: next accum: outdated-unq outdated-all / unq all: 1426 4854 / 1443 4883
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-14] / []

2023-07-28T16:09:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5693990935 # 1765