@@ -1,3 +1,12 @@
+2023-07-30T08:08:58Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5705117237 # 1770
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-30
+* notice: last 14d: unq all: 4 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 1427 4856 / 1444 4885
+* notice: next accum: outdated-unq outdated-all / unq all: 1427 4856 / 1445 4886
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-07-16 2023-07-30]
+
 2023-07-29T16:08:20Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5701334899 # 1768
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-29
